# angrr

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.nix
.github/workflows/: check.yml  update.yml
angrr/: Cargo.toml
angrr/src/: command.rs  config.rs  current.rs  embedded.rs  filter.rs  gc_root.rs  lib.rs  main.rs  options.rs  profile.rs  run.rs  statistics.rs  touch.rs  utils.rs
angrr/src/policy/: mod.rs  profile.rs  temporary.rs
darwin/: module.nix
direnv/: angrr.sh
docs/: config.md
etc/: angrr.toml  example-config.toml
nixos/: angrr.nix  module.nix
nixos/tests/: angrr.nix  config-file.nix  filter.nix  keep-n-per-bucket.nix  preset.nix  validate.nix
shared/: options.nix
src/: main.rs  options.rs
xtask/: Cargo.toml
xtask/src/: main.rs
