[package]
name = "angrr"
description = "Auto Nix GC Roots Retention"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

default-run = "angrr"

[dependencies]
clap = { version = "*", features = ["cargo", "derive"] }
clap_complete = "*"
figment = { version = "*", features = ["toml", "env", "json"] }
toml = "*"
rust-embed = "*"
log = { version = "*", features = ["serde"] }
env_logger = "*"
anyhow = "*"
humantime = "*"
humantime-serde = "*"
dialoguer = "*"
uzers = "*"
nix = { version = "*", features = ["fs"] }
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_regex = "*"
